# Support-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.kb_api  Dockerfile.support_agent  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: smoke-tests.yml
docker/: postgres-start.sh
docs/: ARCHITECTURE.md  FITMENTOR-TELEGRAM-LISTENER.service  FORKFLOW-LIGHT.md  IDENTITY.md  INITIAL-KB-SCHEMA.md  LOCAL-SETUP.md  OPENCRABS-INTEGRATION.md  OPENCRABS-RUNBOOK.md  OPENCRABS-TOOLS-HOST.toml  OPENCRABS-TOOLS.md  OPENCRABS-UPGRADED-BASE.md  TELEGRAM-AGENT-IMPLEMENTATION-PLAN.md  TELEGRAM-OUTREACH-V1.md  TELETHON-LOGIN.md  VPS-UPDATE-RUNBOOK.md
docs/tasks/: 2026-04-23-automated-smoke-tests.md  2026-04-23-generic-fallback-quality.md  2026-04-23-light-operator-actions.md  2026-04-23-listener-loop-guard.md  2026-04-23-owner-routing-and-base-extraction.md  2026-04-23-premium-payment-reply-polish.md  2026-04-23-repo-refresh-and-forkflow-adoption.md  2026-04-23-simple-phrase-normalization.md  2026-04-23-smoke-tests-ci.md  TEMPLATE.md  (+2 more)
migrations/: 0001_init.sql  0002_seed_approved_knowledge.sql  0003_vector_index.sql  0004_seed_support_cases.sql  0005_seed_fitmentor_public_kb.sql  0006_seed_fitmentor_public_kb_ru.sql  0007_add_language_support.sql  0008_add_priority_support.sql  0009_add_test_flag.sql  0010_add_support_case_status.sql
scripts/: opencrabs_kb_bridge.py  opencrabs_telegram_bridge.py  support_listener.py  support_loop_run_once.py  telegram_outreach_search.py
tests/: test_listener_guard.py  test_support_flow_smoke.py
(+29 files in other folders)
