[project]
name = "fitmentor-agent"
version = "0.1.0"
description = "FitMentor support and partnership agent services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.15.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "pgvector>=0.3.6",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
